<resources>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description">説明</string>
    <string name="info">情報</string>
    <string name="author_title">著者</string>
    <string name="publisher_title">出版社</string>
    <string name="publish_date_title">発売日</string>
    <string name="page_count_title">ページ数</string>
    <string name="category_title">カテゴリ</string>
    <string name="language_title">言語</string>
    <string name="purchase">購入する</string>
    <string name="customer_review_title">カスタマーレビュー</string>
</resources>