<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.feature_book_detail.BookDetailViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp"
        tools:context=".android_view.BookDetailFragment">

        <!-- サムネイル -->
        <ImageView
            android:id="@+id/bookThumbnail"
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:contentDescription="@null"
            app:imageUrl="@{viewModel.bookInfoDetail.bookDetailInfo.image}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <LinearLayout
            android:id="@+id/infoFrame"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/bookThumbnail"
            app:layout_constraintTop_toTopOf="parent">

            <!-- タイトル -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@{viewModel.bookInfoDetail.bookDetailInfo.title}"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                tools:text="たいとるたいとるたいとるたいとるたいとる" />

            <!-- 著者 -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@{viewModel.bookInfoDetail.bookDetailInfo.authors}"
                tools:text="著者著者著者著者" />

            <!-- レビュー -->
            <com.example.core_design.ReviewStartsView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="4dp"
                app:setReviewAverage="@{viewModel.bookInfoDetail.bookDetailInfo.averageReviewRate}"
                app:setReviewTotalResult="@{viewModel.bookInfoDetail.bookDetailInfo.totalReviewCount}" />

            <!-- カテゴリ -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@{viewModel.bookInfoDetail.bookDetailInfo.categories}"
                tools:text="カテゴリ：コミック" />

            <!-- 値段 -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@{@string/price(viewModel.bookInfoDetail.bookDetailInfo.price)}"
                tools:text="￥2,000" />

        </LinearLayout>

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="bookThumbnail,infoFrame" />

        <!-- 購入ボタン -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/purchaseButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="?attr/selectableItemBackground"
            android:paddingVertical="4dp"
            android:text="@string/purchase"
            app:layout_constraintTop_toBottomOf="@id/barrier" />

        <!-- 説明 -->
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/descriptionFrame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="?attr/selectableItemBackground"
            android:padding="16dp"
            app:layout_constraintTop_toBottomOf="@id/purchaseButton">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/descriptionTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:ellipsize="end"
                    android:maxLines="3"
                    android:text="@{viewModel.bookInfoDetail.bookDetailInfo.description}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/descriptionTitle"
                    tools:text="説明説明説明説明説明説明説明説明説明説明説明説明" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_more"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <!-- 発売日 出版社 -->
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/detailFrame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="?attr/selectableItemBackground"
            android:padding="16dp"
            app:layout_constraintTop_toBottomOf="@id/descriptionFrame">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toStartOf="@+id/publisherTitle"
                app:layout_constraintStart_toStartOf="@+id/publisherTitle">

                <!-- 出版社 -->
                <TextView
                    android:id="@+id/publisherTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/publisher_title"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <!-- 発売日 -->
                <TextView
                    android:id="@+id/publishDateTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/publish_date_title"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/publisherTitle" />

                <!-- 言語 -->
                <TextView
                    android:id="@+id/languageTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/language_title"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/publishDateTitle" />

                <androidx.constraintlayout.widget.Barrier
                    android:id="@+id/detailsBarrier"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:barrierDirection="end"
                    app:barrierMargin="16dp"
                    app:constraint_referenced_ids="publisherTitle,publishDateTitle,languageTitle" />

                <TextView
                    android:id="@+id/publisher"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@{viewModel.bookInfoDetail.bookDetailInfo.publisher}"
                    app:layout_constraintBaseline_toBaselineOf="@id/publisherTitle"
                    app:layout_constraintStart_toStartOf="@id/detailsBarrier"
                    tools:text="出版社出版社出版社出版社出版社出版社" />

                <TextView
                    android:id="@+id/publishDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@{viewModel.bookInfoDetail.bookDetailInfo.publisherDate}"
                    app:layout_constraintBaseline_toBaselineOf="@id/publishDateTitle"
                    app:layout_constraintStart_toStartOf="@id/detailsBarrier"
                    tools:text="発売日発売日発売日発売日発売日発売日" />

                <TextView
                    android:id="@+id/language"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@{viewModel.bookInfoDetail.bookDetailInfo.language}"
                    app:layout_constraintBaseline_toBaselineOf="@id/languageTitle"
                    app:layout_constraintStart_toStartOf="@id/detailsBarrier"
                    tools:text="日本語日本語日本語日本語日本語日本語" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_more"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <!-- レビュー -->
        <TextView
            android:id="@+id/reviewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/customer_review_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detailFrame" />

        <com.example.core_design.ReviewStartsView
            android:id="@+id/reviewFrame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="4dp"
            app:layout_constraintTop_toBottomOf="@id/reviewTitle"
            app:setReviewAverage="@{viewModel.bookInfoDetail.bookDetailInfo.averageReviewRate}"
            app:setReviewTotalResult="@{viewModel.bookInfoDetail.bookDetailInfo.totalReviewCount}" />

        <!-- レビューリスト -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/reviewList"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="4dp"
            android:orientation="vertical"
            android:paddingHorizontal="16dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/reviewFrame"
            app:spanCount="1" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>